<resources>
    <string name="app_name">Kinnect</string>
    <string name="wordmark">kinnect</string>
    <string name="splash_from">from</string>
    <string name="splash_smd">SMD</string>
    <string name="cd_kinnect_logo">Kinnect logo</string>
    <string name="language_english_uk">English (UK)</string>
    <string name="cd_change_language">Change language</string>
    <string name="recent_login">Recent login</string>
    <string name="demo_user_initials">JW</string>
    <string name="demo_user_name">Jacob West</string>
    <string name="tap_to_log_in">Tap to log in</string>
    <string name="badge_count_2">2</string>
    <string name="cd_more_options">More options</string>
    <string name="login_email_label">Mobile number or email</string>
    <string name="demo_email">jacob.west@mail.com</string>
    <string name="login_password_label">Password</string>
    <string name="demo_password">kinnect2026</string>
    <string name="cd_show_password">Show password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="footer_kinnect_from_smd">Kinnect · from SMD</string>
    <string name="create_account">Create account</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="cd_back">Back</string>
    <string name="signup_heading">What\'s your name and\nbirthday?</string>
    <string name="cd_add_profile_photo">Add profile photo</string>
    <string name="first_name">First name</string>
    <string name="demo_first_name">Jacob</string>
    <string name="last_name">Last name</string>
    <string name="demo_last_name">West</string>
    <string name="birthday">Birthday</string>
    <string name="cd_birthday_info">Why we ask for your birthday</string>
    <string name="day">Day</string>
    <string name="demo_day">14</string>
    <string name="month">Month</string>
    <string name="demo_month">Mar</string>
    <string name="year">Year</string>
    <string name="demo_year">2004</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="custom">Custom</string>
    <string name="email">Email</string>
    <string name="new_password">New password</string>
    <string name="demo_signup_password">kinnect123</string>
    <string name="password_strength_medium">Medium</string>
    <string name="agree_terms">I agree to the Kinnect Terms and Privacy Policy.</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="initials_lm">LM</string>
    <string name="initials_of">OF</string>
    <string name="initials_si">SI</string>
    <string name="initials_ha">HA</string>
    <string name="name_omar_farooq">Omar Farooq</string>
    <string name="name_sara_iqbal">Sara Iqbal</string>
    <string name="name_hamza_ali">Hamza Ali</string>
    <string name="tab_home">Home</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_marketplace">Marketplace</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_menu">Menu</string>
    <string name="cd_search">Search</string>
    <string name="cd_chats">Chats</string>
    <string name="badge_count_3">3</string>
    <string name="badge_count_5">5</string>
    <string name="composer_prompt">What\'s on your mind, Jacob?</string>
    <string name="cd_your_profile">Your profile</string>
    <string name="cd_add_photo">Add photo</string>
    <string name="create_story">Create story</string>
    <string name="cd_story_1">Omar Farooq\'s story</string>
    <string name="cd_story_2">Sara Iqbal\'s story</string>
    <string name="cd_story_3">Hamza Ali\'s story</string>
    <string name="post_author_line"><b>Lina Marsh</b> is at <b>Clifton Beach</b></string>
    <string name="post_time_2h">2h ·</string>
    <string name="cd_public">Public</string>
    <string name="cd_hide_post">Hide post</string>
    <string name="post_text_sunset">Sunset walk with the crew. Worth every grain of sand in my shoes.</string>
    <string name="cd_post_photo">Post photo</string>
    <string name="more_photos_4">+4</string>
    <string name="post_reacted_by">Aisha and 1.2K others</string>
    <string name="post_comment_share_counts">86 comments · 12 shares</string>
    <string name="action_like">Like</string>
    <string name="action_comment">Comment</string>
    <string name="action_share">Share</string>
    <string name="linas_post">Lina’s post</string>
    <string name="count_86_comments">86 comments</string>
    <string name="comment_aisha_short">That sky is unreal.</string>
    <string name="cd_close_reactions">Close reactions</string>
    <string name="reaction_like">Like</string>
    <string name="reaction_love">Love</string>
    <string name="reaction_haha">Haha</string>
    <string name="reaction_wow">Wow</string>
    <string name="reaction_sad">Sad</string>
    <string name="reaction_angry">Angry</string>
    <string name="comments_title">Comments</string>
    <string name="most_relevant">Most relevant</string>
    <string name="reactions_1_2k">1.2K</string>
    <string name="name_aisha_khan">Aisha Khan</string>
    <string name="name_lina_marsh">Lina Marsh</string>
    <string name="name_zain_raza">Zain Raza</string>
    <string name="name_maya_chen">Maya Chen</string>
    <string name="initials_mc">MC</string>
    <string name="comment_aisha">That sky is unreal. Which part of the beach was this?</string>
    <string name="comment_lina">Near the old pier, right before the rain started!</string>
    <string name="comment_zain"><font color="#0B5F63">\@Lina Marsh</font> next time invite the rest of us</string>
    <string name="comment_hamza">Same spot, one year ago:</string>
    <string name="comment_maya">Framing this one.</string>
    <string name="count_24">24</string>
    <string name="count_3">3</string>
    <string name="time_1h">1h</string>
    <string name="time_45m">45m</string>
    <string name="action_reply">Reply</string>
    <string name="view_6_more_replies">View 6 more replies</string>
    <string name="cd_comment_photo">Photo in comment</string>
    <string name="replying_to_aisha">Replying to <font color="#1C1B19"><b>Aisha Khan</b></font></string>
    <string name="cancel">Cancel</string>
    <string name="write_a_reply">Write a reply…</string>
    <string name="cd_camera">Camera</string>
    <string name="cd_emoji">Emoji</string>
    <string name="cd_send">Send</string>
    <string name="create_post_title">Create post</string>
    <string name="create_post_button">Post</string>
    <string name="create_public">Public</string>
    <string name="create_album">Album</string>
    <string name="create_hint">What’s on your mind?</string>
    <string name="create_sample_text">Weekend plan: coffee, sketching, and absolutely no email.</string>
    <string name="create_swatch_plain">Aa</string>
    <string name="create_photo_video">Photo/video</string>
    <string name="create_tag_people">Tag people</string>
    <string name="create_feeling">Feeling/activity</string>
    <string name="create_check_in">Check in</string>
    <string name="create_live_video">Live video</string>
    <string name="create_camera">Camera</string>
    <string name="create_event">Create event</string>
    <string name="picker_recents">Recents</string>
    <string name="picker_next">Next (2)</string>
    <string name="picker_select_multiple">SELECT MULTIPLE</string>
    <string name="picker_badge_1">1</string>
    <string name="picker_badge_2">2</string>
    <string name="picker_video_length">0:23</string>
    <string name="picker_gallery">Gallery</string>
    <string name="picker_photo">Photo</string>
    <string name="picker_video">Video</string>
    <string name="cd_expand">Expand preview</string>
    <string name="camera_mode_text">TEXT</string>
    <string name="camera_mode_live">LIVE</string>
    <string name="camera_mode_story">STORY</string>
    <string name="camera_mode_post">POST</string>
    <string name="camera_mode_boomerang">BOOMERANG</string>
    <string name="cd_brightness">Brightness</string>
    <string name="cd_flash">Flash</string>
    <string name="cd_shutter">Take photo</string>
    <string name="cd_flip_camera">Switch camera</string>
    <string name="cd_effects">Effects</string>
    <string name="cd_open_gallery">Open gallery</string>
    <string name="editor_sticker">Saturday plans</string>
    <string name="editor_your_story">Your story</string>
    <string name="editor_close_friends">Close friends</string>
    <string name="cd_music">Music</string>
    <string name="cd_share_story">Share story</string>
    <string name="cd_story_photo">Story photo</string>
    <string name="cd_close">Close</string>
    <string name="story_time_5h">5h ·</string>
    <string name="karachi_nights">Karachi nights</string>
    <string name="send_message">Send message…</string>
    <string name="your_story_meta">11h · Close friends</string>
    <string name="your_story_seen_by">Seen by 24</string>
    <string name="your_story_create">Create</string>
    <string name="your_story_highlight">Highlight</string>
    <string name="your_story_send">Send</string>
    <string name="your_story_more">More</string>
    <string name="search_query_omar">omar</string>
    <string name="cd_clear_search">Clear search</string>
    <string name="filter_all">All</string>
    <string name="filter_people">People</string>
    <string name="filter_posts">Posts</string>
    <string name="filter_groups">Groups</string>
    <string name="name_omar_siddiqui">Omar Siddiqui</string>
    <string name="name_omar_tariq">Omar Tariq</string>
    <string name="initials_os">OS</string>
    <string name="initials_ot">OT</string>
    <string name="initials_op">OP</string>
    <string name="search_omar_farooq_sub">Friend · Lives in Karachi</string>
    <string name="search_omar_siddiqui_sub">12 mutual friends · FAST-NUCES</string>
    <string name="search_omar_tariq_sub">Works at Daraz · 3 mutual friends</string>
    <string name="cd_add_friend">Add friend</string>
    <string name="see_all_people">See all people</string>
    <string name="group_omar_photography">Omar\'s Photography Circle</string>
    <string name="group_omar_photography_sub">Public · 2.4K members · 10+ posts a day</string>
    <string name="join">Join</string>
    <string name="recent_searches">Recent searches</string>
    <string name="recent_lina_marsh">lina marsh</string>
    <string name="recent_study_desk">study desk karachi</string>
    <string name="recent_smd_class">SMD Class of 2026</string>
    <string name="cd_remove">Remove</string>
    <string name="suggestions">Suggestions</string>
    <string name="your_friends">Your friends</string>
    <string name="cd_cover_photo">Cover photo</string>
    <string name="cd_change_cover">Change cover photo</string>
    <string name="profile_edit">Edit profile</string>
    <string name="edit_save">Save</string>
    <string name="edit_picture">Profile picture</string>
    <string name="edit_cover">Cover photo</string>
    <string name="edit_link">Edit</string>
    <string name="edit_label_name">Name</string>
    <string name="edit_label_username">Username</string>
    <string name="edit_label_website">Website</string>
    <string name="edit_label_bio">Bio</string>
    <string name="edit_label_email">Email</string>
    <string name="edit_label_phone">Phone</string>
    <string name="edit_label_gender">Gender</string>
    <string name="edit_username_value">jacob.west</string>
    <string name="edit_bio_value">Digital goodies designer.</string>
    <string name="edit_professional_mode">Switch to professional mode</string>
    <string name="edit_private_info">Private information</string>
    <string name="edit_email_value">jacob.west@mail.com</string>
    <string name="edit_phone_value">+92 300 1234567</string>
    <string name="edit_gender_value">Male</string>
</resources>